--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,15 +12,17 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Build application
-        run: yarn --prod --verbose --link-duplicates
+        run: yarn --prod --link-duplicates
   build:
     runs-on: ubuntu-latest
+    needs: [install]
     steps:
       - uses: actions/checkout@v3
       - name: Build application
         run: yarn build
   deploy:
     runs-on: ubuntu-latest
+    needs: [install, build]
     steps:
       - uses: actions/checkout@v3
       - name: Deploy to Firebase
