--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Build application
+      - name: Install packages
         run: yarn --prod --link-duplicates
   build:
     runs-on: ubuntu-latest
