--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
-    "redux": "^4.2.0"
+    "redux": "^4.2.0",
+    "react-scripts": "^5.0.1",
   },
   "scripts": {
     "start": "react-scripts start",
@@ -37,7 +38,6 @@
     "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
     "@types/react-redux": "^7.1.24",
-    "react-scripts": "^5.0.1",
     "typescript": "^4.8.3",
     "web-vitals": "^3.0.2"
   }
