--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react-scripts": "^5.0.1"
   },
   "scripts": {
+    "preci": "rm -rf node_modules",
+    "ci": "yarn install --immutable --immutable-cache --check-cache --frozen-lockfile",
     "start": "react-scripts start",
     "build": "react-scripts build"
   },
