--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Install packages
-        run: yarn run preci && yarn run ci
+        run: yarn install --prod --check-cache && yarn add react-scripts@latest
   build:
     runs-on: ubuntu-latest
     needs: [install]
