--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,14 +12,14 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Install packages
-        run: yarn install --prod --check-cache && yarn add react-scripts@latest
+        run: npm ci
   build:
     runs-on: ubuntu-latest
     needs: [install]
     steps:
       - uses: actions/checkout@v3
       - name: Build application
-        run: yarn build && mv build dist
+        run: npm run build && mv build dist
         env:
           REACT_APP_API_KEY: ${{ secrets.REACT_APP_API_KEY }}
           REACT_APP_APP_ID: ${{ secrets.REACT_APP_APP_ID }}
