--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,18 +7,11 @@ on:
     branches: ["main"]
   workflow_dispatch:
 jobs:
-  install:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Install packages
-        run: npm ci
   build:
     runs-on: ubuntu-latest
-    needs: [install]
     steps:
       - name: Build application
-        run: npm run build && mv build dist
+        run: npm ci && npm run build && mv build dist
         env:
           REACT_APP_API_KEY: ${{ secrets.REACT_APP_API_KEY }}
           REACT_APP_APP_ID: ${{ secrets.REACT_APP_APP_ID }}
