--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - name: Clone repository
         uses: actions/checkout@v2
-      - name: Use Node.js 12.x
+      - name: Use Node.js 18.x
         uses: actions/setup-node@v1
         with:
           node-version: 18.x
@@ -36,6 +36,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build]
     steps:
+      - name: Install firebase
+        run: npm i -g firebase firebase-tools
       # Download previously shared build
       - name: Get artifact
         uses: actions/download-artifact@v1
