--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           node-version: 18.x
       - name: Copy firebase.json
-        run: ls && cp firebase.json ./public/firebase.json
+        run: cp firebase.json ./public/firebase.json
       - name: Install dependencies
         run: npm install
       - name: Generate build
@@ -40,10 +40,9 @@ jobs:
     steps:
       - name: Install firebase
         run: npm i -g firebase firebase-tools
-      # Download previously shared build
       - name: Get artifact
         uses: actions/download-artifact@v1
         with:
           name: react-github-actions-build
       - name: Deploy to Firebase
-        run: firebase deploy
+        run: ls && firebase deploy
