--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Copy firebase.json
         run: cp firebase.json ./public/firebase.json
       - name: Install dependencies
-        run: npm install
+        run: npm install && npm i firebase --save
       - name: Generate build
         run: npm run build
         env:
@@ -29,10 +29,5 @@ jobs:
           REACT_APP_MESSAGING_SENDER_ID: ${{ secrets.REACT_APP_MESSAGING_SENDER_ID }}
           REACT_APP_PROJECT_ID: ${{ secrets.REACT_APP_PROJECT_ID }}
           REACT_APP_STORAGE_BUCKET: ${{ secrets.REACT_APP_STORAGE_BUCKET }}
-      - name: Share artifact inside workflow
-        uses: actions/upload-artifact@v1
-        with:
-          name: react-github-actions-build
-          path: build  
       - name: Deploy to Firebase
         run: firebase deploy
