--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,5 +29,7 @@ jobs:
           REACT_APP_MESSAGING_SENDER_ID: ${{ secrets.REACT_APP_MESSAGING_SENDER_ID }}
           REACT_APP_PROJECT_ID: ${{ secrets.REACT_APP_PROJECT_ID }}
           REACT_APP_STORAGE_BUCKET: ${{ secrets.REACT_APP_STORAGE_BUCKET }}
+      - name: list
+        run: ls
       - name: Deploy to Firebase
         run: firebase deploy
