--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+**/*.cache
+/build
+.vscode
+
 # Created by https://www.toptal.com/developers/gitignore/api/firebase,windows,yarn,react,node,visualstudiocode,git
 # Edit at https://www.toptal.com/developers/gitignore?templates=firebase,windows,yarn,react,node,visualstudiocode,git
 
@@ -179,7 +183,6 @@ sketch
 
 ### VisualStudioCode ###
 .vscode/*
-!.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
@@ -246,6 +249,3 @@ $RECYCLE.BIN/
 # .pnp.*
 
 # End of https://www.toptal.com/developers/gitignore/api/firebase,windows,yarn,react,node,visualstudiocode,git
-
-**/*.cache
-/build
