--- a/firebase.json
+++ b/firebase.json
@@ -8,6 +8,29 @@
         "**/.*",
         "**/node_modules/**"
       ],
+      "headers": [
+        {
+          "source": "**/*",
+          "headers": [
+            {
+              "key": "Cache-Control",
+              "value": "no-cache, no-store, must-revalidate private"
+            },
+            {
+              "key": "X-Content-Type-Options",
+              "value": "nosniff"
+            },
+            {
+              "key": "X-Frame-Options",
+              "value": "DENY"
+            },
+            {
+              "key": "Content-Security-Policy",
+              "value": "default-src 'self'; style-src 'self' https://fonts.googleapis.com 'sha256-47DEQpj8HBSa+/TImW+5JCeuQeRkm5NMpJWZG3hSuFU='; font-src 'self' https://fonts.gstatic.com; connect-src 'self' https://firestore.googleapis.com; script-src 'none'; img-src 'self'; frame-src 'none'; object-src 'none'; base-uri 'self'; form-action 'self'; require-trusted-types-for 'script'; script-src-elem 'self'; frame-ancestors 'none';"
+            }
+          ]
+        }
+      ],
       "rewrites": [
         {
           "source": "**",
