--- a/firebase.json
+++ b/firebase.json
@@ -8,6 +8,26 @@
         "**/.*",
         "**/node_modules/**"
       ],
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "no-cache, no-store, must-revalidate private"
+        },
+        {
+          "key": "X-Content-Type-Options",
+          "value": "nosniff"
+        },
+        {
+          "key": "X-Frame-Options",
+          "value": "DENY"
+        },
+        {
+          "key": "Content-Security-Policy",
+          "value": "frame-ancestors 'none'"
+        }
+
+      
+      ],
       "rewrites": [
         {
           "source": "**",
