--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "scales-exercises",
-  "version": "0.0.1",
+  "version": "0.1.1",
   "private": true,
+  "license": "MIT",
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
-    "@mui/icons-material": "^5.14.13",
+    "@mui/icons-material": "^5.14.15",
     "@mui/material": "^5.14.15",
     "@reduxjs/toolkit": "^1.9.7",
-    "firebase": "^10.5.0",
+    "firebase": "^10.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
@@ -18,7 +19,7 @@
   },
   "scripts": {
     "preci": "rm -rf node_modules",
-    "ci": "yarn install --immutable --immutable-cache --check-cache --frozen-lockfile",
+    "ci": "yarn install --immutable --immutable-cache --check-cache --check-files",
     "start": "react-scripts start",
     "build": "react-scripts build"
   },
@@ -40,8 +41,12 @@
     ]
   },
   "devDependencies": {
-    "@types/node": "^20.8.9",
-    "@types/react": "^18.2.27",
+    "@babel/core": "^7.23.2",
+    "@babel/plugin-syntax-flow": "^7.22.5",
+    "@babel/plugin-transform-private-property-in-object": "^7.22.11",
+    "@babel/plugin-transform-react-jsx": "^7.22.15",
+    "@types/node": "^20.8.10",
+    "@types/react": "^18.2.33",
     "@types/react-dom": "^18.2.14",
     "@types/react-redux": "^7.1.28",
     "typescript": "^5.2.2",
